<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_small"
    android:backgroundTint="@color/white"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/backgroundCardRadius">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/buyer_info"
            android:textAppearance="@style/HeadlineTextAppearance" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/phone_number"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="phone"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailInputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:hint="@string/mail"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:inputType="textEmailAddress"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/privacy_policy"
            android:textAppearance="@style/LabelMediumTextAppearance" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>