<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_small"
    android:backgroundTint="@color/white"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/backgroundCardRadius">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_normal"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/touristTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_weight="1"
                android:textAppearance="@style/HeadlineTextAppearance"
                tools:text="@string/first_tourist" />

            <FrameLayout
                android:id="@+id/expandButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="@drawable/expand_background"
                android:clickable="true">

                <ImageView
                    android:id="@+id/arrowImageView"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_expand" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secondNameInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:hint="@string/secondName"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthDateInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:hint="@string/birthDate"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:inputType="date"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/citizenshipInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:hint="@string/citizenship"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/citizenshipEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passportNumberInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:hint="@string/passportNumber"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passportNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:inputType="number"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passportExpiryDateInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:hint="@string/passportExpiry"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passportExpiryDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:inputType="number"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>