<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true">

        <ImageView
            android:id="@+id/backButton"
            android:clickable="true"
            app:tint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal |center_vertical"
            android:text="@string/order_confirmed"
            android:textAppearance="@style/AppBarTextAppearance" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <FrameLayout
            android:id="@+id/partyPopper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/success_background"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:src="@drawable/party_popper" />
        </FrameLayout>

        <TextView
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/orderConfirmedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_accepted"
            android:textAlignment="center"
            android:textAppearance="@style/HeadlineTextAppearance" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/confirmation_info"
            android:textAlignment="center"
            android:textAppearance="@style/LabelLargeTextAppearance"
            app:layout_constraintTop_toBottomOf="@id/orderConfirmedTextView" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <FrameLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/secondary_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/okayButton"
            style="@style/Button.Hotel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/button_background"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textAppearance="@style/BodyTextAppearance"
            android:textColor="@color/white"
            android:text="@string/super_label" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>