<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_small"
    android:elevation="@dimen/card_elevation"
    style="@style/Widget.Material3.CardView.Filled"
    android:backgroundTint="@color/white"
    android:layout_marginBottom="@dimen/margin_small"
    app:cardCornerRadius="@dimen/backgroundCardRadius">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/tour"
                android:textAppearance="@style/LabelLargeTextAppearance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/fuel_charge"
                android:textAppearance="@style/LabelLargeTextAppearance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/service_charge"
                android:textAppearance="@style/LabelLargeTextAppearance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/total_payment"
                android:textAppearance="@style/LabelLargeTextAppearance" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tourPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textAppearance="@style/BodyTextAppearance"
                tools:text="186 600 ₽" />

            <TextView
                android:id="@+id/fuelChargeTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textAppearance="@style/BodyTextAppearance"
                tools:text="186 600 ₽" />

            <TextView
                android:id="@+id/serviceChargeTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textAppearance="@style/BodyTextAppearance"
                tools:text="186 600 ₽" />

            <TextView
                android:id="@+id/summaryPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:textAppearance="@style/BodyTextAppearance"
                tools:text="186 600 ₽" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>